<resources>
    <string name="app_name">Easy Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="favorites_fragment">Favorites fragment</string>
    <string name="categories_fragment">Categories Fragment</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>
    <string name="search_image">Search Image</string>
    <string name="what_would_you_like_to_eat">What would you like to eat?</string>
    <string name="random_image">Random Image</string>
    <string name="over_popular_items">Over Popular Items</string>
</resources>