<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/linear_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/myfont"
                    android:text="@string/home"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/_25ssp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_search"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/search_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_search" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_would_you_like_to_eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/myfont"
                android:text="@string/what_would_you_like_to_eat"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/linear_header"
                app:layout_constraintTop_toBottomOf="@id/linear_header" />

            <androidx.cardview.widget.CardView
                android:id="@+id/random_meal_card"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_would_you_like_to_eat">

                <ImageView
                    android:id="@+id/img_random_meal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/accent"
                    android:contentDescription="@string/random_image"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_over_popular_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/myfont"
                android:text="@string/over_popular_items"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_would_you_like_to_eat"
                app:layout_constraintTop_toBottomOf="@id/random_meal_card" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_view_meals_popular"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_over_popular_items" />


            <TextView
                android:id="@+id/tv_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/myfont"
                android:text="@string/categories"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/rec_view_meals_popular"
                app:layout_constraintTop_toBottomOf="@id/rec_view_meals_popular" />

            <androidx.cardview.widget.CardView
                android:id="@+id/random_meal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_categories">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rec_view_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="none" />

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>